[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_teleoperator_spot"
version = "0.0.1"
description = "LeRobot Spot Teleoperation VR integration"
readme = "README.md"
authors = [
  { name = "Jonas Stehr"},
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "lerobot>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lerobot_teleoperator_spot*"]
exclude = ["*.egg-info"]